--- a/core/templates/agenda.html
+++ b/core/templates/agenda.html
@@ -8,7 +8,7 @@
 
     <ul style='font-size: 18px'>
         {% for evento in eventos %}
-            <li>{{ evento.titulo}} - {{ evento.get_data_evento}} </li>
+            <li>{{ evento.titulo}} - {{ evento.local}} - {{ evento.get_data_evento}} </li>
         {% endfor %}
     </ul>
 
