--- a/core/templates/evento.html
+++ b/core/templates/evento.html
@@ -5,20 +5,21 @@
 <h2>Evento</h2>
 <form action="submit" method="POST"> {% csrf_token %}
     <label>Título</label>
+    <input type="number" name="id_evento" size=23 value="{{ evento.id }}" hidden >
     <br>
-    <input type="text" name="titulo" size=23>
+    <input type="text" name="titulo" size=23 value="{{ evento.titulo }}">
     <br>
     <label>Data</label>
     <br>
-    <input type="datetime-local" name="data_evento" size=23>
+    <input type="datetime-local" name="data_evento" size=23 value="{{ evento.get_data_input_evento }}">
     <br>
     <label>Local</label>
     <br>
-    <input type="text" name="local" size=23>
+    <input type="text" name="local" size=23 value="{{ evento.local }}">
     <br>
     <label>Descricao</label>
     <br>
-    <textarea name="descricao" rows="5" cols="24"></textarea>
+    <textarea name="descricao" rows="5" cols="24">{{ evento.descricao }}</textarea>
     <br>
     <button type="submit">Salvar</button>
     <a href="/">
